--- a/SecurityWithJWT/SecurityWithJWT/src/main/resources/application.properties
+++ b/SecurityWithJWT/SecurityWithJWT/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=SecurityWithJWT
 
-spring.datasource.url=jdbc:mysql://localhost:3306/security_with_jwt
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://localhost:3306/*your db schema name*
+spring.datasource.username=*your db username*
+spring.datasource.password=*your db password*
 spring.jpa.hibernate.ddl-auto=update
 
 refresh.token.expires.in=604800
